[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/gui.gd" id="1_l21wu"]
[ext_resource type="Texture2D" uid="uid://b4u7ijwypy0yx" path="res://assets/images/wind_outer.png" id="1_pt8l6"]
[ext_resource type="Texture2D" uid="uid://ifk52g8tc23p" path="res://assets/images/wind_1.png" id="2_voupr"]
[ext_resource type="Texture2D" uid="uid://b126nacnfy06x" path="res://assets/images/wind_2.png" id="3_cpwec"]
[ext_resource type="Texture2D" uid="uid://3d2vxy6n3wem" path="res://assets/images/wind_3.png" id="4_gg864"]
[ext_resource type="Texture2D" uid="uid://c0u7fwe4sx71d" path="res://assets/images/wind_4.png" id="5_x6pef"]
[ext_resource type="PackedScene" path="res://gui/BalanceControl.tscn" id="7_rdmx5"]

[sub_resource type="LabelSettings" id="LabelSettings_rg8fl"]
font_size = 36
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="gui" type="Node2D"]
script = ExtResource("1_l21wu")

[node name="Wind_gui" type="Node2D" parent="."]
position = Vector2(164, 478)

[node name="outer" type="Sprite2D" parent="Wind_gui"]
texture = ExtResource("1_pt8l6")

[node name="wind_meter" type="Node2D" parent="Wind_gui"]

[node name="wind_1" type="Sprite2D" parent="Wind_gui/wind_meter"]
texture = ExtResource("2_voupr")

[node name="wind_2" type="Sprite2D" parent="Wind_gui/wind_meter"]
texture = ExtResource("3_cpwec")

[node name="wind_3" type="Sprite2D" parent="Wind_gui/wind_meter"]
texture = ExtResource("4_gg864")

[node name="wind_4" type="Sprite2D" parent="Wind_gui/wind_meter"]
texture = ExtResource("5_x6pef")

[node name="suck" type="Label" parent="Wind_gui"]
offset_left = 352.0
offset_top = -226.0
offset_right = 507.0
offset_bottom = -173.0
text = "You suck"
label_settings = SubResource("LabelSettings_rg8fl")

[node name="BalanceControl" parent="." instance=ExtResource("7_rdmx5")]
